--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-quill-new": "^3.3.3",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "uuid": "^11.1.0",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
